--- a/FrontEnd/my-app/src/app/components/dashboard/alumnos/listaalumnos/listaalumnos.component.html
+++ b/FrontEnd/my-app/src/app/components/dashboard/alumnos/listaalumnos/listaalumnos.component.html
@@ -1,1 +1,22 @@
-<p>listaalumnos works!</p>
+
+<table class="table table-hover">
+    <thead>
+      <tr>
+        <th scope="col">Nombre</th>
+        <th scope="col">Apellido</th>
+        <th scope="col">Fecha Nacimiento</th>
+        <th scope="col">Email</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr class="table-active">
+        <th scope="row">Active</th>
+        <td>Column content</td>
+        <td>Column content</td>
+        <td>Column content</td>
+      </tr>
+      <tr>
+    </tbody>
+  </table>
+  
+  
