--- a/FrontEnd/my-app/src/app/components/dashboard/alumnos/listaalumnos/listaalumnos.component.html
+++ b/FrontEnd/my-app/src/app/components/dashboard/alumnos/listaalumnos/listaalumnos.component.html
@@ -11,13 +11,13 @@
       </tr>
     </thead>
     <tbody>
-      <tr *ngFor="let item of listAlumnos" class="table-active">
-        <td> {{ item.nombre }} </td>
-        <td> {{ item.apellido }} </td>
-        <td> {{ item.plan }} </td>
-        <td> {{ item.mail }} </td>
-        <td> {{ item.direccion }} </td>
-        <td> {{ item.fechaN }} </td>
+      <tr *ngFor="let alumno of listadoAlumnos$ | async" class="table-active">
+        <td> {{ alumno.nombre }} </td>
+        <td> {{ alumno.apellido }} </td>
+        <td> {{ alumno.plan }} </td>
+        <td> {{ alumno.mail }} </td>
+        <td> {{ alumno.direccion }} </td>
+        <td> {{ alumno.fechaN }} </td>
       </tr>
       <tr>
     </tbody>
