--- a/FrontEnd/SysAcad/src/app/components/alumnos/alumnos.component.html
+++ b/FrontEnd/SysAcad/src/app/components/alumnos/alumnos.component.html
@@ -1,22 +1,35 @@
-<table class="table table-hover">
-    <thead>
-      <tr>
-        <th scope="col">Nombre</th>
-        <th scope="col">Apellido</th>
-        <th scope="col">Plan</th>
-        <th scope="col">Mail</th>
-        <th scope="col">Direccion</th>
-        <th scope="col">Fecha de Nacimiento</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr *ngFor="let alumno of listaAlumnos" class="table-active">
-        <th scope="row">{{alumno.nombre}}</th>
-        <td>{{alumno.apellido}}</td>
-        <td>{{alumno.plan}}</td>
-        <td>{{alumno.mail}}</td>
-        <td>{{alumno.direccion}}</td>
-        <td>{{alumno.fechaN}}</td>
-      </tr>
-    </tbody>
-  </table>
+<div class="container">
+
+    <div class="title">
+       <h4>Listado de Alumnos</h4>
+       <button type="button" class="btn btn-primary btn-lg m-2">Agregar Alumno</button>
+     </div>
+     <div class="search">
+       <table class="table table-hover">
+           <tr>
+             <th scope="col">Nombre</th>
+             <th scope="col">Apellido</th>
+             <th scope="col">Plan</th>
+             <th scope="col">Mail</th>
+             <th scope="col">Direccion</th>
+             <th scope="col">Fecha de Nacimiento</th>
+            <th scope="col">Acciones</th>
+           </tr>
+           <tr *ngFor="let alumno of listaAlumnos" class="table-active">
+             <th scope="row">{{alumno.nombre}}</th>
+             <td>{{alumno.apellido}}</td>
+             <td>{{alumno.plan}}</td>
+             <td>{{alumno.mail}}</td>
+             <td>{{alumno.direccion}}</td>
+             <td>{{alumno.fechaN}}</td>
+             <td>
+               <button type="button" class="btn btn-primary m-2">Editar</button>
+               <button type="button" class="btn btn-danger m-2">Eliminar</button>
+             </td>
+           </tr>
+       </table>
+     </div> 
+
+   
+   
+</div>
