--- a/FrontEnd/SysAcad/src/app/components/add-update-alumno/add-update-alumno.component.html
+++ b/FrontEnd/SysAcad/src/app/components/add-update-alumno/add-update-alumno.component.html
@@ -1,1 +1,40 @@
-<p>add-update-alumno works!</p>
+<div class="container-sm">
+<form>
+    <fieldset>
+      <h4 class="p-3 rounded bg-primary text-white m-4 text-center">Ingresar Datos del Alumno</h4>
+
+      <div class="d-flex align-items-center justify-content-center m-4">
+        <input class="form-control w-50"aria-describedby="emailHelp" placeholder="Ingresar Nombre">
+      </div>
+
+      <div class="d-flex align-items-center justify-content-center m-4">
+        <input class="form-control w-50" placeholder="Ingresar Apellido">
+      </div>
+
+      <div class="d-flex align-items-center justify-content-center m-4">
+        <input class="form-control w-50" placeholder="Ingresar Email">
+      </div>
+
+      <div class="d-flex align-items-center justify-content-center m-4">
+        <input class="form-control w-50" placeholder="Ingresar Direccion">
+      </div>
+
+      <div class="d-flex align-items-center justify-content-center m-4">
+        <input class="form-control w-25" placeholder="aaaa-mm-dd">
+      </div>
+
+       <label class="d-flex align-items-center justify-content-center">Seleccionar Plan</label>
+      <div class="d-flex align-items-center justify-content-center m-2">
+        <select class="form-select w-25">
+          <option>98</option>
+          <option>99</option>
+          <option>01</option>
+          <option>05</option>
+          <option>11</option>
+        </select>
+      </div>
+
+      <button type="submit" class="btn btn-primary d-flex align-items-center justify-content-center m-4">Enviar</button>
+    </fieldset>
+  </form> 
+</div>
