--- a/FrontEnd/SysAcad/src/app/components/alumnos/alumnos.component.html
+++ b/FrontEnd/SysAcad/src/app/components/alumnos/alumnos.component.html
@@ -1,8 +1,8 @@
 <div class="container">
 
     <div class="title">
-       <h4 class="m-4">Listado de Alumnos</h4>
-       <button type="button" class="btn btn-primary btn-lg m-2">Agregar Alumno</button>
+       <h4 class="m-3">Listado de Alumnos</h4>
+      <button type="button" class="btn btn-primary btn-lg m-2" onclick="location.href='http://localhost:4200/add_alumno'">Agregar Alumno</button>
      </div>
      <div class="search">
        <table class="table table-hover text-center">
@@ -23,7 +23,7 @@
              <td class="text-center align-middle">{{alumno.direccion}}</td>
              <td class="text-center align-middle">{{alumno.fechaN}}</td>
              <td class="text-center align-middle">
-               <button type="button" class="btn btn-primary m-2">Editar</button>
+               <button type="button" class="btn btn-primary m-2" onclick="location.href='http://localhost:4200/add_alumno'">Editar</button>
                <button type="button" class="btn btn-danger m-2">Eliminar</button>
              </td>
            </tr>
