--- a/FrontEnd/SysAcad/src/app/components/navbar/navbar.component.html
+++ b/FrontEnd/SysAcad/src/app/components/navbar/navbar.component.html
@@ -7,9 +7,7 @@
       <div class="collapse navbar-collapse" id="navbarColor01">
         <ul class="navbar-nav me-auto">
           <li class="nav-item">
-            <a class="nav-link active" href="http://localhost:4200/alumnos">Alumnos
-              <span class="visually-hidden"></span>
-            </a>
+            <button type="button" class="btn btn-primary btn-lg" onclick="location.href='http://localhost:4200/alumnos'">Alumnos</button>
           </li>
         </ul>
       </div>
