--- a/FrontEnd/SysAcad/src/app/components/add-update-alumno/add-update-alumno.component.html
+++ b/FrontEnd/SysAcad/src/app/components/add-update-alumno/add-update-alumno.component.html
@@ -1,30 +1,36 @@
 <div class="container-sm">
-<form>
+<form class="m-4 p-3 mb-2 bg-secondary rounded">
     <fieldset>
       <h4 class="p-3 rounded bg-primary text-white m-4 text-center">Ingresar Datos del Alumno</h4>
 
       <div class="d-flex align-items-center justify-content-center m-4">
+        <label class="d-flex align-items-center justify-content-center m-3">Nombre:</label>
         <input class="form-control w-50"aria-describedby="emailHelp" placeholder="Ingresar Nombre">
       </div>
 
       <div class="d-flex align-items-center justify-content-center m-4">
+        <label class="d-flex align-items-center justify-content-center m-3">Apellido:</label>
         <input class="form-control w-50" placeholder="Ingresar Apellido">
       </div>
 
       <div class="d-flex align-items-center justify-content-center m-4">
+        <label class="d-flex align-items-center justify-content-center m-3">Email:</label>
         <input class="form-control w-50" placeholder="Ingresar Email">
       </div>
 
       <div class="d-flex align-items-center justify-content-center m-4">
+        <label class="d-flex align-items-center justify-content-center m-3">Direccion:</label>
         <input class="form-control w-50" placeholder="Ingresar Direccion">
       </div>
 
       <div class="d-flex align-items-center justify-content-center m-4">
+        <label class="d-flex align-items-center justify-content-center m-3">Fecha de Nacimiento:</label>
         <input class="form-control w-25" placeholder="aaaa-mm-dd">
       </div>
 
-       <label class="d-flex align-items-center justify-content-center">Seleccionar Plan</label>
+       
       <div class="d-flex align-items-center justify-content-center m-2">
+        <label class="d-flex align-items-center justify-content-center m-3">Seleccionar Plan:</label>
         <select class="form-select w-25">
           <option>98</option>
           <option>99</option>
@@ -34,7 +40,10 @@
         </select>
       </div>
 
+      <div class="d-flex align-items-center justify-content-end">
       <button type="submit" class="btn btn-primary d-flex align-items-center justify-content-center m-4">Enviar</button>
+      </div>
+      
     </fieldset>
   </form> 
 </div>
