FrontEnd (add Materia)

--- a/FrontEnd/SysAcad/src/app/components/navbar/navbar.component.html
+++ b/FrontEnd/SysAcad/src/app/components/navbar/navbar.component.html
@@ -9,7 +9,8 @@
       <div class="collapse navbar-collapse" id="navbarColor01">
         <ul class="navbar-nav me-auto">
           <li class="nav-item">
-            <button type="button" class="btn btn-primary bg-secondary rounded-3" onclick="location.href='http://localhost:4200/alumnos'">Alumnos</button>
+            <button type="button" class="btn btn-primary bg-secondary rounded-3 " onclick="location.href='http://localhost:4200/alumnos'">Alumnos</button>
+            <button type="button" class="btn btn-primary bg-secondary rounded-3 ml-4 " onclick="location.href='http://localhost:4200/materias'">Materias</button>
           </li>
         </ul>
       </div>
