--- a/FrontEnd/SysAcad/src/app/components/Alum/add-update-alumno/add-update-alumno.component.html
+++ b/FrontEnd/SysAcad/src/app/components/Alum/add-update-alumno/add-update-alumno.component.html
@@ -1,49 +1,37 @@
-<div class="container-sm">
-<form class="m-4 p-3 mb-2 bg-secondary rounded">
-    <fieldset>
-      <h4 class="p-3 rounded bg-primary text-white m-4 text-center">Ingresar Datos del Alumno</h4>
-
-      <div class="d-flex align-items-center justify-content-center m-4">
-        <label class="d-flex align-items-center justify-content-center m-3">Nombre:</label>
-        <input class="form-control w-50"aria-describedby="emailHelp" placeholder="Ingresar Nombre">
+<div class="row mt-3">
+  <div class="col-lg-4 offset-lg-4">
+    <div class="card text-white bg-primary mb-3" style="max-width: 50rem;">
+      <div class="card-header text-center">Agregar Alumno</div>
+      <div class="card-body">
+          <form>
+            <input type="text" class="form-control mt-2" placeholder="Ingrese Nombre">
+            <input type="text" class="form-control mt-2" placeholder="Ingrese Apellido">
+            <input type="text" class="form-control mt-2" placeholder="Ingrese Email">
+            <input type="text" class="form-control mt-2" placeholder="Ingrese Direccion">
+            <input type="text" class="form-control mt-2" placeholder="Ingresar Nacimiento (aaaa-mm-dd)">
+            <div class="d-flex justify-content-center align-items-center mt-2">
+            <label class="form-label  mr-2">Plan:</label>
+            <select class="form-select">
+              <option>98</option>
+              <option>01</option>
+              <option>05</option>
+              <option>10</option>
+              <option>24</option>
+            </select>
+            </div>
+            <div class="row mt-2 text-center">
+              <div class="col-lg-6">
+                <button onclick="location.href='http://localhost:4200/alumnos'" type="button" class="btn btn-secondary">Volver</button>
+              </div>
+              <div class="col-lg-6">
+                <button type="button" class="btn btn-success">Aceptar</button>
+              </div>
+            </div>
+          </form> 
       </div>
-
-      <div class="d-flex align-items-center justify-content-center m-4">
-        <label class="d-flex align-items-center justify-content-center m-3">Apellido:</label>
-        <input class="form-control w-50" placeholder="Ingresar Apellido">
-      </div>
-
-      <div class="d-flex align-items-center justify-content-center m-4">
-        <label class="d-flex align-items-center justify-content-center m-3">Email:</label>
-        <input class="form-control w-50" placeholder="Ingresar Email">
-      </div>
-
-      <div class="d-flex align-items-center justify-content-center m-4">
-        <label class="d-flex align-items-center justify-content-center m-3">Direccion:</label>
-        <input class="form-control w-50" placeholder="Ingresar Direccion">
-      </div>
-
-      <div class="d-flex align-items-center justify-content-center m-4">
-        <label class="d-flex align-items-center justify-content-center m-3">Fecha de Nacimiento:</label>
-        <input class="form-control w-25" placeholder="aaaa-mm-dd">
-      </div>
-
-       
-      <div class="d-flex align-items-center justify-content-center m-2">
-        <label class="d-flex align-items-center justify-content-center m-3">Seleccionar Plan:</label>
-        <select class="form-select w-25">
-          <option>98</option>
-          <option>99</option>
-          <option>01</option>
-          <option>05</option>
-          <option>11</option>
-        </select>
-      </div>
-
-      <div class="d-flex align-items-center justify-content-end">
-      <button type="submit" class="btn btn-primary d-flex align-items-center justify-content-center m-4">Enviar</button>
-      </div>
-      
-    </fieldset>
-  </form> 
+    </div> 
+  </div>
 </div>
+
+
+
