--- a/FrontEnd/SysAcad/src/app/components/Mat/add-update-materia/add-update-materia.component.html
+++ b/FrontEnd/SysAcad/src/app/components/Mat/add-update-materia/add-update-materia.component.html
@@ -1,24 +1,24 @@
-<div class="container-sm">
-    <form class="m-4 p-3 mb-2 bg-secondary rounded">
+<div class="container">
+    <form class="m-4 p-3 mb-2 bg-secondary rounded w-50">
         <fieldset>
-          <h4 class="p-3 rounded bg-primary text-white m-4 text-center">Ingresar Datos de la Materia</h4>
-    
-          <div class="d-flex align-items-center justify-content-center m-4">
-            <label class="d-flex align-items-center justify-content-center m-3">Nombre:</label>
+          <h4 class="p-3 rounded bg-primary text-white text-center">Ingresar Datos de la Materia</h4>
+          
+          <div class="row d-flex align-items-center justify-content-center mt-2">
+            <label class="d-flex align-items-center justify-content-center m-1">Nombre:</label>
             <input class="form-control w-50"aria-describedby="emailHelp" placeholder="Ingresar Nombre">
           </div>
     
-          <div class="d-flex align-items-center justify-content-center m-4">
-            <label class="d-flex align-items-center justify-content-center m-3">Horas Anuales:</label>
+          <div class="row d-flex align-items-center justify-content-center mt-2">
+            <label class="d-flex align-items-center justify-content-center m-1">Horas:</label>
             <input class="form-control w-50" placeholder="Ingresar las Horas Anuales">
           </div>
     
-          <div class="d-flex align-items-center justify-content-center m-4">
-            <label class="d-flex align-items-center justify-content-center m-3">Modalidad:</label>
+          <div class="row d-flex align-items-center justify-content-center mt-2">
+            <label class="d-flex align-items-center justify-content-center m-1">Modalidad:</label>
             <input class="form-control w-50" placeholder="Ingresar Modalidad">
           </div>
     
-          <div class="d-flex align-items-center justify-content-end">
+          <div class="row d-flex align-items-center justify-content-end">
           <button type="submit" class="btn btn-primary d-flex align-items-center justify-content-center m-4">Enviar</button>
           </div>
           
