--- a/FrontEnd/SysAcad/src/app/components/Alum/add-update-alumno/add-update-alumno.component.html
+++ b/FrontEnd/SysAcad/src/app/components/Alum/add-update-alumno/add-update-alumno.component.html
@@ -1,7 +1,7 @@
 <div class="row mt-3">
   <div class="col-lg-4 offset-lg-4">
     <div class="card text-white bg-primary mb-3" style="max-width: 50rem;">
-      <div class="card-header text-center">Agregar Alumno</div>
+      <div class="card-header text-center">{{ operacion }}</div>
       <div class="card-body">
         <span>
           Todos los campos son <strong>requeridos</strong>
