--- a/FrontEnd/SysAcad/src/app/components/Alum/alumnos/alumnos.component.html
+++ b/FrontEnd/SysAcad/src/app/components/Alum/alumnos/alumnos.component.html
@@ -1,5 +1,4 @@
-<app-progress-bar *ngIf="loading"></app-progress-bar>
-<div *ngIf="!loading" class="container">
+<div class="container">
   <div class="title">
      <h4 class="m-3">Listado de Alumnos</h4>
     <button type="button" class="btn btn-primary btn-lg m-2" onclick="location.href='http://localhost:4200/add_alumno'">Agregar Alumno</button>
