--- a/FrontEnd/SysAcad/src/app/app.component.html
+++ b/FrontEnd/SysAcad/src/app/app.component.html
@@ -1,2 +1,4 @@
 <app-navbar></app-navbar>
-<router-outlet class="conteiner"></router-outlet>
+<div class="container">
+    <router-outlet></router-outlet>
+</div>
