--- a/FrontEnd/SysAcad/src/app/components/navbar/navbar.component.html
+++ b/FrontEnd/SysAcad/src/app/components/navbar/navbar.component.html
@@ -1,18 +1,22 @@
 <nav class="navbar navbar-expand-lg bg-primary" data-bs-theme="dark">
-    <div class="container-fluid">
-      <a class="navbar-brand mr-4" href="/">
-        <img src="web_6872807(1).png" alt="Logo" style="width:60px;">
-      </a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarColor01">
-        <ul class="navbar-nav me-auto">
-          <li class="nav-item">
-            <button type="button" class="btn btn-primary bg-secondary rounded-3 " onclick="location.href='http://localhost:4200/alumnos'">Alumnos</button>
-            <button type="button" class="btn btn-primary bg-secondary rounded-3 ml-4 " onclick="location.href='http://localhost:4200/materias'">Materias</button>
-          </li>
-        </ul>
-      </div>
+  <div class="container-fluid">
+    <a class="navbar-brand me-4" href="/">
+      <img src="web_6872807(1).png" alt="Logo" style="width:60px;">
+    </a>
+    <!-- Botón del menú para pantallas pequeñas -->
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    
+    <div class="collapse navbar-collapse" id="navbarColor01">
+      <ul class="navbar-nav me-auto">
+        <li class="nav-item">
+          <!-- Botón Alumnos -->
+          <button type="button" class="btn btn-primary bg-secondary rounded-3 me-2 mb-2 mb-lg-0" onclick="location.href='http://localhost:4200/alumnos'">Alumnos</button>
+          <!-- Botón Materias -->
+          <button type="button" class="btn btn-primary bg-secondary rounded-3 mb-2 mb-lg-0" onclick="location.href='http://localhost:4200/materias'">Materias</button>
+        </li>
+      </ul>
     </div>
-  </nav>
+  </div>
+</nav>
