--- a/FrontEnd/SysAcad/src/app/components/Mat/materias/materias.component.html
+++ b/FrontEnd/SysAcad/src/app/components/Mat/materias/materias.component.html
@@ -5,20 +5,24 @@
     </div>
     <div class="search">
         <table class="table table-hover text-center">
-            <tr>
-                <th scope="col">Nombre</th>
-                <th scope="col">Horas Anuales</th>
-                <th scope="col">Modalidad</th>
-            </tr>
-            <tr *ngFor="let materia of listaMateria" class="table-active">
-                <th scope="row" class="text-center align-middle">{{materia.nombre}}</th>
-                <td class="text-center align-middle">{{materia.horas_anuales}}</td>
-                <td class="text-center align-middle">{{materia.modalidad}}</td>
-                <td class="text-center align-middle">
-                <button type="button" class="btn btn-primary m-2" onclick="location.href='http://localhost:4200/add_alumno'">Editar</button>
-                <button type="button" class="btn btn-danger m-2">Eliminar</button>
-                </td>
-            </tr>
+            <thead>
+                <tr>
+                    <th scope="col">Nombre</th>
+                    <th scope="col">Horas Anuales</th>
+                    <th scope="col">Modalidad</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr *ngFor="let materia of listaMaterias" class="table-active">
+                    <th scope="row" class="text-center align-middle">{{materia.nombre}}</th>
+                    <td class="text-center align-middle">{{materia.horas_anuales}}</td>
+                    <td class="text-center align-middle">{{materia.modalidad}}</td>
+                    <td class="text-center align-middle">
+                    <button routerLink="/editar_materia/{{ materia.id }}" type="button" class="btn btn-primary m-2" >Editar</button>
+                    <button type="button" class="btn btn-danger m-2">Eliminar</button>
+                    </td>
+                </tr>
+            </tbody>
         </table>
     </div> 
 </div>
