--- a/FrontEnd/SysAcad/src/app/components/Mat/add-update-materia/add-update-materia.component.html
+++ b/FrontEnd/SysAcad/src/app/components/Mat/add-update-materia/add-update-materia.component.html
@@ -6,23 +6,29 @@
               <span>Todos los campos son <strong>requeridos</strong></span>
               <form [formGroup]="form" (ngSubmit)="addMateria()">
                   
-                  <input formControlName="nombre" type="text" class="form-control mt-2" placeholder="Ingrese Nombre">
+                <input formControlName="nombre" type="text" class="form-control mt-2" placeholder="Ingrese Nombre">
 
                   
-                  <input formControlName="horas_anuales" type="text" class="form-control mt-2" placeholder="Ingrese la cantidad de horas anuales">
-
-                  
-                  <input formControlName="modalidad" type="text" class="form-control mt-2" placeholder="Ingresar la modalidad">
+                <input formControlName="horas_anuales" type="text" class="form-control mt-2" placeholder="Ingrese la cantidad de horas anuales">
 
 
-                  <div class="row mt-2 text-center">
-                      <div class="col-6">
-                          <button onclick="location.href='http://localhost:4200/materias'" type="button" class="btn btn-secondary">Volver</button>
-                      </div>
-                      <div class="col-6">
+                <div class="d-flex justify-content-center align-items-center mt-2">
+                    <label class="form-label mr-2">Modalidad:</label>
+                    <select formControlName="modalidad" class="form-select">
+                        <option>Anual</option>
+                        <option>Cuatrimestral</option>
+                    </select>
+                </div>
+
+                
+                <div class="row mt-2 text-center">
+                    <div class="col-6">
+                        <button onclick="location.href='http://localhost:4200/materias'" type="button" class="btn btn-secondary">Volver</button>
+                    </div>
+                    <div class="col-6">
                           <button [disabled]="form.invalid" type="submit" class="btn btn-success">Aceptar</button>
-                      </div>
-                  </div>
+                    </div>
+                </div>
               </form>
           </div>
       </div>
