--- a/FrontEnd/SysAcad/src/app/components/Mat/materias/materias.component.html
+++ b/FrontEnd/SysAcad/src/app/components/Mat/materias/materias.component.html
@@ -10,6 +10,7 @@
                     <th scope="col">Nombre</th>
                     <th scope="col">Horas Anuales</th>
                     <th scope="col">Modalidad</th>
+                    <th scope="col">Acciones</th>
                 </tr>
             </thead>
             <tbody>
@@ -19,7 +20,7 @@
                     <td class="text-center align-middle">{{materia.modalidad}}</td>
                     <td class="text-center align-middle">
                     <button routerLink="/editar_materia/{{ materia.id }}" type="button" class="btn btn-primary m-2" >Editar</button>
-                    <button type="button" class="btn btn-danger m-2">Eliminar</button>
+                    <button (click)="deleteMateria(materia.id!)" type="button" class="btn btn-danger m-2">Eliminar</button>
                     </td>
                 </tr>
             </tbody>
