Front_End update

--- a/FrontEnd/SysAcad/src/app/components/navbar/navbar.component.html
+++ b/FrontEnd/SysAcad/src/app/components/navbar/navbar.component.html
@@ -12,9 +12,12 @@
       <ul class="navbar-nav me-auto">
         <li class="nav-item">
           <!-- Botón Alumnos -->
-          <button type="button" class="btn btn-primary bg-secondary rounded-3 me-2 mb-2 mb-lg-0" onclick="location.href='http://localhost:4200/alumnos'">Alumnos</button>
+          <button type="button" class="btn btn-primary bg-secondary rounded-3 me-2 mb-2 mb-lg-0 ml-2" onclick="location.href='http://localhost:4200/alumnos'">Alumnos</button>
           <!-- Botón Materias -->
-          <button type="button" class="btn btn-primary bg-secondary rounded-3 mb-2 mb-lg-0" onclick="location.href='http://localhost:4200/materias'">Materias</button>
+          <button type="button" class="btn btn-primary bg-secondary rounded-3 mb-2 mb-lg-0 ml-2" onclick="location.href='http://localhost:4200/materias'">Materias</button>
+          <!-- Botón Inscirpciones-->
+          <button type="button" class="btn btn-primary bg-secondary rounded-3 mb-2 mb-lg-0 ml-2" onclick="location.href='http://localhost:4200/buscar'">Buscar</button>
+
         </li>
       </ul>
     </div>
