--- a/FrontEnd/SysAcad/src/app/components/Alum/add-update-alumno/add-update-alumno.component.html
+++ b/FrontEnd/SysAcad/src/app/components/Alum/add-update-alumno/add-update-alumno.component.html
@@ -1,48 +1,63 @@
 <div class="row mt-3">
-  <div class="col-12 col-md-8 col-lg-4 offset-lg-4"> <!-- Se ajusta a pantallas pequeñas y grandes -->
-      <div class="card text-white bg-primary mb-3" style="max-width: 50rem;">
-          <div class="card-header text-center">{{ operacion }} Alumno</div>
-          <div class="card-body">
-              <span>Todos los campos son <strong>requeridos</strong></span>
-              <form [formGroup]="form" (ngSubmit)="addAlumno()">
-                  <!-- Nombre -->
-                  <input formControlName="nombre" type="text" class="form-control mt-2" placeholder="Ingrese Nombre">
-
-                  <!-- Apellido -->
-                  <input formControlName="apellido" type="text" class="form-control mt-2" placeholder="Ingrese Apellido">
-
-                  <!-- Email -->
-                  <input formControlName="mail" type="email" class="form-control mt-2" placeholder="Ingrese Email">
-
-                  <!-- Dirección -->
-                  <input formControlName="direccion" type="text" class="form-control mt-2" placeholder="Ingrese Direccion">
-
-                  <!-- Fecha de nacimiento -->
-                  <input formControlName="fechaN" type="date" class="form-control mt-2" placeholder="Ingresar Nacimiento (aaaa-mm-dd)">
-
-                  <!-- Plan -->
-                  <div class="d-flex justify-content-center align-items-center mt-2">
-                      <label class="form-label mr-2">Plan:</label>
-                      <select formControlName="plan" class="form-select">
-                          <option>98</option>
-                          <option>01</option>
-                          <option>05</option>
-                          <option>10</option>
-                          <option>24</option>
-                      </select>
-                  </div>
-
-                  <!-- Botones -->
-                  <div class="row mt-2 text-center">
-                      <div class="col-6">
-                          <button onclick="location.href='http://localhost:4200/alumnos'" type="button" class="btn btn-secondary">Volver</button>
-                      </div>
-                      <div class="col-6">
-                          <button [disabled]="form.invalid" type="submit" class="btn btn-success">Aceptar</button>
-                      </div>
-                  </div>
-              </form>
-          </div>
+    <div class="col-12 col-md-8 col-lg-4 offset-lg-4"> <!-- Se ajusta a pantallas pequeñas y grandes -->
+      <div class="modal-content" style="background-color: #375a7f; border-radius: 0.25rem; border: none;">
+        <div class="card-header text-center text-white">{{ operacion }} Alumno</div>
+        <div class="card-body text-white pt-1">
+          <form [formGroup]="form" (ngSubmit)="addAlumno()">
+            <!-- Nombre -->
+            <div class="mb-2 mt-2">
+              <label for="nombre" class="form-label">Nombre:</label>
+              <input formControlName="nombre" type="text" id="nombre" class="form-control">
+            </div>
+  
+            <!-- Apellido -->
+            <div class="mb-2">
+              <label for="apellido" class="form-label">Apellido:</label>
+              <input formControlName="apellido" type="text" id="apellido" class="form-control">
+            </div>
+  
+            <!-- Email -->
+            <div class="mb-2">
+              <label for="mail" class="form-label">Email:</label>
+              <input formControlName="mail" type="email" id="mail" class="form-control">
+            </div>
+  
+            <!-- Dirección -->
+            <div class="mb-2">
+              <label for="direccion" class="form-label">Dirección:</label>
+              <input formControlName="direccion" type="text" id="direccion" class="form-control">
+            </div>
+  
+            <!-- Fecha de nacimiento -->
+            <div class="mb-2">
+              <label for="fechaN" class="form-label">Fecha de Nacimiento:</label>
+              <input formControlName="fechaN" type="date" id="fechaN" class="form-control">
+            </div>
+  
+            <!-- Plan -->
+            <div class="d-flex justify-content-center align-items-center mt-2 mb-2">
+              <label for="plan" class="form-label mr-2">Plan:</label>
+              <select formControlName="plan" id="plan" class="form-select">
+                <option>98</option>
+                <option>01</option>
+                <option>05</option>
+                <option>10</option>
+                <option>24</option>
+              </select>
+            </div>
+  
+            <!-- Botones -->
+            <div class="row mt-2 text-center">
+              <div class="col-6">
+                <button onclick="location.href='http://localhost:4200/alumnos'" type="button" class="btn btn-secondary">Volver</button>
+              </div>
+              <div class="col-6">
+                <button [disabled]="form.invalid" type="submit" class="btn btn-success">Aceptar</button>
+              </div>
+            </div>
+          </form>
+        </div>
       </div>
+    </div>
   </div>
-</div>
+  
