--- a/FrontEnd/SysAcad/src/app/components/Alum/alumnos/alumnos.component.html
+++ b/FrontEnd/SysAcad/src/app/components/Alum/alumnos/alumnos.component.html
@@ -7,6 +7,7 @@
     <table class="table table-hover text-center">
       <thead>
         <tr>
+          <th scope="col">Legajo</th>
           <th scope="col">Nombre</th>
           <th scope="col">Apellido</th>
           <th scope="col">Plan</th>
@@ -18,7 +19,8 @@
       </thead>
       <tbody>
         <tr *ngFor="let alumno of listaAlumnos" class="table-active">
-          <th scope="row" class="text-center align-middle">{{alumno.nombre}}</th>
+          <th scope="row" class="text-center align-middle">{{alumno.legajo}}</th>
+          <td class="text-center align-middle">{{alumno.nombre}}</td>
           <td class="text-center align-middle">{{alumno.apellido}}</td>
           <td class="text-center align-middle">{{alumno.plan}}</td>
           <td class="text-center align-middle">{{alumno.mail}}</td>
