--- a/FrontEnd/SysAcad/src/app/components/Mat/add-update-materia/add-update-materia.component.html
+++ b/FrontEnd/SysAcad/src/app/components/Mat/add-update-materia/add-update-materia.component.html
@@ -1,36 +1,43 @@
 <div class="row mt-3">
-  <div class="col-12 col-md-8 col-lg-4 offset-lg-4"> 
-      <div class="card text-white bg-primary mb-3" style="max-width: 50rem;">
-          <div class="card-header text-center">{{ operacion }} Materia</div>
-          <div class="card-body">
-              <span>Todos los campos son <strong>requeridos</strong></span>
-              <form [formGroup]="form" (ngSubmit)="addMateria()">
-                  
-                <input formControlName="nombre" type="text" class="form-control mt-2" placeholder="Ingrese Nombre">
-
-                  
-                <input formControlName="horas_anuales" type="text" class="form-control mt-2" placeholder="Ingrese la cantidad de horas anuales">
-
-
-                <div class="d-flex justify-content-center align-items-center mt-2">
-                    <label class="form-label mr-2">Modalidad:</label>
-                    <select formControlName="modalidad" class="form-select">
-                        <option>Anual</option>
-                        <option>Cuatrimestral</option>
-                    </select>
-                </div>
-
-                
-                <div class="row mt-2 text-center">
-                    <div class="col-6">
-                        <button onclick="location.href='http://localhost:4200/materias'" type="button" class="btn btn-secondary">Volver</button>
+    <div class="col-12 col-md-8 col-lg-4 offset-lg-4">
+        <div class="card text-white bg-primary mb-3" style="max-width: 50rem;">
+            <div class="card-header text-center">{{ operacion }} Materia</div>
+            <div class="card-body pt-2">
+                <form [formGroup]="form" (ngSubmit)="addMateria()">
+                    <!-- Nombre -->
+                     <div class="mb-2">
+                        <label for="nombre" class="form-label mb-1">Nombre:</label>
+                        <input id="nombre" formControlName="nombre" type="text" class="form-control">
+                     </div>
+                    
+                    <div class="mb-3">
+                        <label for="horas_anuales" class="form-label mb-1">Horas Anuales:</label>
+                        <input id="horas_anuales" formControlName="horas_anuales" type="text" class="form-control" placeholder="Ingrese la cantidad de horas anuales">
                     </div>
-                    <div class="col-6">
-                          <button [disabled]="form.invalid" type="submit" class="btn btn-success">Aceptar</button>
+                    <!-- Horas anuales -->
+                    
+  
+                    <!-- Modalidad -->
+                    <div class="d-flex justify-content-center align-items-center mb-3">
+                        <label for="modalidad" class="form-label mr-2">Modalidad:</label>
+                        <select id="modalidad" formControlName="modalidad" class="form-select">
+                            <option>Anual</option>
+                            <option>Cuatrimestral</option>
+                        </select>
                     </div>
-                </div>
-              </form>
-          </div>
-      </div>
+  
+                    <!-- Botones -->
+                    <div class="row mt-2 text-center">
+                        <div class="col-6">
+                            <button onclick="location.href='http://localhost:4200/materias'" type="button" class="btn btn-secondary">Volver</button>
+                        </div>
+                        <div class="col-6">
+                            <button [disabled]="form.invalid" type="submit" class="btn btn-success">Aceptar</button>
+                        </div>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
   </div>
-</div>
+  
