--- a/FrontEnd/SysAcad/src/app/components/busqueda/resultado/resultado.component.html
+++ b/FrontEnd/SysAcad/src/app/components/busqueda/resultado/resultado.component.html
@@ -76,7 +76,7 @@
 
       <!-- Botones para navegar -->
       <div class="d-flex justify-content-between mt-3">
-        <button class="btn btn-secondary">Volver</button>
+        <button class="btn btn-secondary" (click)="goBack()">Volver</button>
         <button (click)="editarAlumno(alumno?.id)" class="btn btn-success">Editar</button>
         <button class="btn btn-success">Nueva Inscripción</button>
       </div>
