--- a/FrontEnd/SysAcad/src/app/components/busqueda/resultado/resultado.component.html
+++ b/FrontEnd/SysAcad/src/app/components/busqueda/resultado/resultado.component.html
@@ -34,7 +34,7 @@
           <input type="text" id="mail" [value]="alumno.mail" readonly class="form-control mt-0 mb-3">
         </div>
 
-        <div class="col-md-6 align-items-center">
+        <div class="col-md-6 ">
           <label for="plan" class="form-label text-white mb-0">Plan</label>
           <input type="text" id="plan" [value]="alumno.plan" readonly class="form-control mt-0 mb-3">
         </div>
