--- a/FrontEnd/SysAcad/src/app/components/busqueda/buscador/buscador.component.html
+++ b/FrontEnd/SysAcad/src/app/components/busqueda/buscador/buscador.component.html
@@ -15,7 +15,7 @@
                     <!-- Botones -->
                     <div class="row mt-2 text-center">
                         <div class="col-12">
-                            <button type="submit" class="btn btn-success">Buscar Alumno</button>
+                            <button type="submit" class="btn btn-light btn-sm m-2">Buscar Alumno</button>
                         </div>
                     </div>
                 </form>
