--- a/FrontEnd/SysAcad/src/app/components/Mat/add-update-materia/add-update-materia.component.html
+++ b/FrontEnd/SysAcad/src/app/components/Mat/add-update-materia/add-update-materia.component.html
@@ -32,10 +32,10 @@
                     <!-- Botones -->
                     <div class="row mt-2 text-center">
                         <div class="col-6">
-                            <button onclick="location.href='http://localhost:4200/materias'" type="button" class="btn btn-secondary">Volver</button>
+                            <button onclick="location.href='http://localhost:4200/materias'" type="button" class="btn btn-secondary btn-sm m-2">Volver</button>
                         </div>
                         <div class="col-6">
-                            <button [disabled]="form.invalid" type="submit" class="btn btn-success">Aceptar</button>
+                            <button [disabled]="form.invalid" type="submit" class="btn btn-light btn-sm m-2">Aceptar</button>
                         </div>
                     </div>
                 </form>
