--- a/FrontEnd/SysAcad/src/app/components/busqueda/listado-i/listado-i.component.html
+++ b/FrontEnd/SysAcad/src/app/components/busqueda/listado-i/listado-i.component.html
@@ -1,26 +1,35 @@
 <div class="container">
-    <h2>Inscripciones</h2>
-  
-    <table class="table table-bordered">
-      <thead>
-        <tr>
-          <th>ID</th>
-          <th>Fecha</th>
-          <th>Alumno ID</th>
-          <th>Materia ID</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr *ngFor="let inscripcion of inscripciones">
-          <td>{{ inscripcion.id }}</td>
-          <td>{{ inscripcion.fecha }}</td>
-          <td>{{ inscripcion.alumno_id }}</td>
-          <td>{{ inscripcion.materia_id }}</td>
-        </tr>
-      </tbody>
-    </table>
-  
-    <div *ngIf="errorMessage" class="alert alert-danger">
+  <div class="card text-white bg-primary mb-3 mt-3">
+    <div class="d-flex justify-content-between align-items-center card-header">
+      <h4 class="m-3">Inscripciones</h4>
+      <button type="button" class="btn btn-light btn-sm m-2" onclick="location.href='http://localhost:4200/add_inscripcion'">Agregar Inscripción</button>
+    </div>
+
+    <div class="table-responsive">
+      <table class="table table-secondary text-center mt-3 mb-3">
+        <thead>
+          <tr>
+            <th scope="col">Fecha</th>
+            <th scope="col">Materia</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr *ngFor="let inscripcion of inscripciones" class="table-active">
+            <td class="text-center align-middle">{{ inscripcion.fecha }}</td>
+            <td class="text-center align-middle">{{ inscripcion.nombreMateria || 'Cargando...' }}</td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+
+    <div *ngIf="errorMessage" class="alert alert-danger m-3">
       {{ mensajeError }}
     </div>
+
+    <div class="row mt-2 text-center">
+      <div class="col-12">
+        <button (click)="goBack()" type="button" class="btn btn-secondary btn-sm m-2">Volver</button>
+      </div>
+    </div>
   </div>
+</div>
