--- a/FrontEnd/SysAcad/src/app/components/busqueda/listado-i/listado-i.component.html
+++ b/FrontEnd/SysAcad/src/app/components/busqueda/listado-i/listado-i.component.html
@@ -2,7 +2,7 @@
   <div class="card text-white bg-primary mb-3 mt-3">
     <div class="d-flex justify-content-between align-items-center card-header">
       <h4 class="m-3">Inscripciones</h4>
-      <button type="button" class="btn btn-light btn-sm m-2" onclick="location.href='http://localhost:4200/add_inscripcion'">Agregar Inscripción</button>
+      <button type="button" class="btn btn-light btn-sm m-2" (click)="goadd()">Agregar Inscripción</button>
     </div>
 
     <div class="table-responsive">
