fix_style_filter

--- a/FrontEnd/SysAcad/src/app/components/Mat/materias/materias.component.html
+++ b/FrontEnd/SysAcad/src/app/components/Mat/materias/materias.component.html
@@ -22,7 +22,7 @@
 
     <!-- Contenedor de tabla con scroll y encabezado fijo -->
     <div class="table-responsive" style="max-height: 400px; overflow-y: auto;">
-      <table class="table table-secondary text-center mt-3 mb-3" style="position: relative;">
+      <table class="table table-secondary text-center" style="position: relative;">
         <thead style="position: sticky; top: 0; background-color: #444; z-index: 1;">
           <tr>
             <th scope="col">Nombre</th>
