add_function_ver-info

--- a/FrontEnd/SysAcad/src/app/components/Alum/alumnos/alumnos.component.html
+++ b/FrontEnd/SysAcad/src/app/components/Alum/alumnos/alumnos.component.html
@@ -58,6 +58,12 @@
                 class="btn btn-danger btn-sm m-1">
                 Eliminar
               </button>
+              <button
+                (click)="verAlumno(alumno)"
+                type="button"
+                class="btn btn-info btn-sm m-1">
+                Ver Info
+              </button>
             </td>
           </tr>
         </tbody>
